middle-end: Exclude TOP permute from blend considerations

Similarly to UNKNOWN permutes, TOP needs to be excluded from being considered
for blends because it produces no permute to check.

gcc/ChangeLog:

	PR middle-end/98264
	* tree-vect-slp-patterns.c (linear_loads_p): Exclude TOP permute.

gcc/testsuite/ChangeLog:

	PR middle-end/98264
	* gcc.target/i386/pr98264.c: New test.